fix text in footer overflowing its bg

--- a/Nueva_carpeta_SASS/scss/archivo.scss
+++ b/Nueva_carpeta_SASS/scss/archivo.scss
@@ -311,7 +311,6 @@ footer {
 }
 #copyRight {
 	background-color: blueviolet;
-	height: 40px;
 	text-align: center;
 	text-decoration: none;
 	list-style: none;
